# Orbis

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
example-plugin/: Cargo.toml  README.md
example-plugin/src/: lib.rs
plugin-worker/: Cargo.toml
plugin-worker/src/: main.rs  worker.rs
plugins/API/docs/: security.md
scripts/: compute-plugin-hashes.sh  make-self-signed-cert.sh  sign-plugin.sh  test-plugin-system.sh
server/: Cargo.toml
server/src/: main.rs
