[package]
name = "plugin-worker"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "plugin-worker"
path = "src/main.rs"

[dependencies]
plugin-api = { path = "../plugin-api" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libloading = "0.9.0"

[lints]
workspace = true

