[package]
name = "orbis-assets"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
sea-orm = {version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "rbac",
    "with-chrono",
    "with-json",
    "postgres-array"
]}
dotenv = {version = "0.15", optional = true}
num-traits = "0.2"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
plugin-api = { path = "../plugin-api" }

[features]
default = []
dev = ["dotenv"]

[lints]
workspace = true